Fixed search issue related to movies with special chars by encoding url